<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/bt_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:text="@string/playmusic"
        android:onClick="onClick"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        <Button
        android:id="@+id/bt_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:text="@string/playvideo"
        android:onClick="onClick"
        android:textAppearance="?android:attr/textAppearanceLarge" />
         <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:text="@string/main_info"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   <TextView
        android:id="@+id/showtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:text="@string/main_showinfo"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/ram"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/main_ram"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/nand"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:layout_height="wrap_content"
        android:text="@string/main_nand"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/main_battery"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_network"
        android:layout_gravity="left"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/main_barcode"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/main_music"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
        <TextView
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/main_video"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
