<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/button_sdram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sdram"
            android:textSize="50px" >
        </Button>
        <Button
            android:id="@+id/button_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/flash"
            android:textSize="50px" >
        </Button>
        <Button
            android:id="@+id/button_sdcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sdcard"
            android:textSize="50px" >
        </Button>
		<Button
            android:id="@+id/button_usbhost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/usbhost"
            android:textSize="50px" >
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/button_touchkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/touchkey"
            android:textSize="50px" >
        </Button>
        <Button
            android:id="@+id/button_gravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gravity"
            android:textSize="50px" >
        </Button>
        <Button
            android:id="@+id/button_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wifi"
            android:textSize="50px" >
        </Button>
        <Button
            android:id="@+id/button_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bluetooth"
            android:textSize="50px" >
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/button_mouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mouse"
            android:textSize="50px" >
        </Button>
        <Button
            android:id="@+id/button_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/camera"
            android:textSize="50px" >
        </Button>
        <Button
            android:id="@+id/button_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/display"
            android:textSize="50px" >
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/play"
            android:textSize="50px" >
        </Button>
        <Button
            android:id="@+id/button_recorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/recorder"
            android:textSize="50px" >
        </Button>
		<Button
            android:id="@+id/button_earplug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/earplug"
            android:textSize="50px" >
        </Button>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="horizontal" >
	<Button
        android:id="@+id/button_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/general"
        android:textSize="50px" >
    </Button>
	<Button
        android:id="@+id/button_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/report"
        android:textSize="50px" >
    </Button>
	</LinearLayout>

</LinearLayout>
