<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/textMouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/mouseTitle"
        android:textSize="30px" />
    <TextView
        android:id="@+id/textTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/mouseTip"
        android:textSize="30px" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/button_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20px"
            android:gravity="center"
            android:text="@string/left"
            android:textSize="30px" >
        </Button>
        <Button
            android:id="@+id/button_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:gravity="center"
            android:text="@string/right"
            android:textSize="30px" >
        </Button>
        <Button
            android:id="@+id/button_drag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:gravity="center"
            android:text="@string/drag"
            android:textSize="30px" >
        </Button>
    </LinearLayout>
    <TextView
        android:id="@+id/textResult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10px"
        android:background="#333333"
        android:text="@string/textresult"
        android:textColor="#000000"
        android:textSize="30px" />
</LinearLayout>
