<?xml version="1.0" encoding="utf-8"?>   
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"   
	android:orientation="vertical"   
	android:layout_width="fill_parent"   
	android:layout_height="fill_parent" 
    android:padding="10px" >
    <TextView
        android:id="@+id/textPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/playTitle"
        android:textSize="30px" />
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/confirm"
            android:textSize="30px" >
        </Button>
    </LinearLayout>
    <TextView
   	    android:id="@+id/message1"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
   	    android:layout_marginTop="10px"
       	android:background="#333333"
        android:text="@string/first"
   	    android:textColor="#000000"
       	android:textSize="30px" />
	<LinearLayout
		android:layout_width="fill_parent"    
		android:layout_height="fill_parent"
		android:gravity="center_horizontal"
   	    android:layout_marginTop="100px"
		android:orientation="horizontal" > 
		<Button   
		android:id="@+id/StartButton"    
		android:layout_height="wrap_content"     
		android:layout_width="wrap_content"    
   	    android:layout_marginRight="30px"
		android:gravity="center"
		android:text="@string/start"    
		android:textSize="35px"/>     
		<Button   
		android:id="@+id/StopButton"    
		android:layout_height="wrap_content"     
		android:layout_width="wrap_content"   
   	    android:layout_marginLeft="30px"
		android:gravity="center"
		android:text="@string/stop"    
		android:textSize="35px"/>     
	</LinearLayout>
</LinearLayout>
