<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10px" >
    <TextView
        android:id="@+id/textNandflash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/flashTitle"
        android:textSize="30px" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100px"
            android:gravity="center"
            android:text="@string/start"
            android:textSize="30px" >
        </Button>
        <Button
            android:id="@+id/button_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100px"
            android:gravity="center"
            android:text="@string/stop"
            android:textSize="30px" >
        </Button>
    </LinearLayout>
    <TextView
        android:id="@+id/message1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10px"
        android:background="#333333"
        android:text="@string/first"
        android:textColor="#000000"
        android:textSize="30px" />
</LinearLayout>
